# st25r95

./: .gitignore  AGENTS.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
nix/: rust-toolchain.nix
src/: analog.rs  callbacks.rs  command.rs  control.rs  error.rs  gpio.rs  lib.rs  protocol.rs  spi.rs
src/protocol/: ce_iso14443a.rs  felica.rs  iso14443a.rs  iso14443b.rs  iso15693.rs  mod.rs
src/register/: acc_a.rs  arc_b.rs  auto_detect_filter.rs  mod.rs  timer_window.rs  wakeup.rs
