# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "st25r95"
version = "0.1.0"
edition = "2021"
description = "Driver for ST25R95 integrated transceiver for contactless applications (NFC)"
rust = "1.86.0"

[dependencies]
bitflags = { version = "2.6" }
derive_more = { version = "1.0", features = ["from"], default-features = false }
heapless = { version = "0.9" }
