# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundationdevices.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
categories = ["embedded", "no-std"]
description = "Driver for ST25R95 integrated transceiver for contactless applications (NFC)"
edition = "2021"
keywords = ["no-std", "nfc"]
license = "GPL-3.0-or-later"
name = "st25r95"
repository = "https://github.com/Foundation-Devices/st25r95"
rust-version = "1.86.0"
version = "0.2.0"

[dependencies]
bitflags = { version = "2.6" }
derive_more = { version = "1.0", features = ["from"], default-features = false }
heapless = { version = "0.9" }
